--- a/project_code/css/main.css
+++ b/project_code/css/main.css
@@ -66,6 +66,12 @@ textarea {
    ========================================================================== */
 
 
+html, body { margin:0; padding:0; overflow:hidden }
+svg { position:fixed; top:0; left:0; height:100%; width:100% }
+
+svg {
+    background:black;
+}
 
 
 
