--- a/project_code/css/main.css
+++ b/project_code/css/main.css
@@ -71,6 +71,8 @@ svg { position:fixed; top:0; left:0; height:100%; width:100% }
 
 svg {
     background:black;
+    
+    stroke-linecap : round;
 }
 
 
